<resources>
    <string name="app_name">TRAC</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_join">JOIN A CHALLENGE</string>
    <string name="title_create">CREATE A CHALLENGE</string>
    <string name="title_activity_create_group">""</string>
    <string name="title_menu">"MENU"</string>
    <string name="title_my_profile">"MY PROFILE"</string>
    <string name="title_leaderboard">"LEADERBOARD"</string>
    <string name="title_settings">"SETTINGS"</string>
    <string name="title_logout">"LOGOUT"</string>
    <string name="step_counter">
         android.hardware.sensor.stepcounter
    </string>
    <string name="step_detector">
         android.hardware.sensor.stepdetector
    </string>
    <string name="channel_name">NotificationChannel</string>
    <string name="channel_description">ChannelDesc</string>

</resources>
