<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">




    <android.support.constraint.ConstraintLayout

        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#f8f8f8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="#bfbfbf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_menu"
            android:textColor="#555555"
            android:textSize="23sp"
            app:fontFamily="@font/muli_extralight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageButton
            android:id="@+id/x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            app:layout_constraintHorizontal_bias="0.909"
            app:layout_constraintStart_toEndOf="@+id/tvTitle"
            app:srcCompat="@drawable/btn_menu_close"
            tools:layout_editor_absoluteY="4dp" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/trac_logo"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />



    </android.support.constraint.ConstraintLayout>
    <Button
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/title_my_profile"
        android:textSize="20sp"
        app:fontFamily="@font/muli_extralight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="#bfbfbf"
        app:layout_constraintBottom_toBottomOf="@id/profile"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/leaderboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/title_leaderboard"
        android:textSize="20sp"
        app:fontFamily="@font/muli_extralight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="#bfbfbf"
        app:layout_constraintBottom_toBottomOf="@id/leaderboard"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/title_settings"
        android:textSize="20sp"
        app:fontFamily="@font/muli_extralight"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="166dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leaderboard"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="#bfbfbf"
        app:layout_constraintBottom_toBottomOf="@id/settings"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/title_logout"
        android:textSize="20sp"
        app:fontFamily="@font/muli_extralight"
        tools:layout_editor_absoluteX="-29dp"
        tools:layout_editor_absoluteY="224dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="#bfbfbf"
        app:layout_constraintBottom_toBottomOf="@id/logout"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>
